Mulig å hente statistikk for kontor_id
