# app/kartlegging-api/openapi/spec.yaml
@@ -111,6 +111,35 @@ paths:
             application/problem+json:
               schema:
                 $ref: '#/components/schemas/ProblemDetails'
+    post:
+      tags:
+        - statistics
+      operationId: finn_statistics
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/StatisticsQueryRequest'
+        required: true
+      responses:
+        '200':
+          description: Statistikk over registrerte arbeidssøkere
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/StatisticsResponse'
+        '400':
+          description: Ugyldig forespørsel
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetails'
+        '500':
+          description: Intern feil
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetails'
 
 components:
   # SECURITY
@@ -182,6 +211,15 @@ components:
           page: 1
           pageSize: 1000
           sortOrder: "DESC"
+    StatisticsQueryRequest:
+      type: object
+      required:
+        - kontorId
+      properties:
+        kontorId:
+          type: string
+      example:
+        kontorId: "1234"
     PagingRequest:
       type: object
       required:
@@ -259,58 +297,13 @@ components:
     StatisticsResponse:
       type: object
       required:
-        - total
-        - isNull
-        - isNotNull
-        - over0030Days
-        - over0060Days
-        - over0090Days
-        - over0180Days
-        - over0365Days
-        - over0730Days
-        - over1095Days
+        - perioder
+        - ledighet
       properties:
-        total:
-          type: integer
-          format: int64
-        isNull:
-          type: integer
-          format: int64
-        isNotNull:
-          type: integer
-          format: int64
-        over0030Days:
-          type: integer
-          format: int64
-        over0060Days:
-          type: integer
-          format: int64
-        over0090Days:
-          type: integer
-          format: int64
-        over0180Days:
-          type: integer
-          format: int64
-        over0365Days:
-          type: integer
-          format: int64
-        over0730Days:
-          type: integer
-          format: int64
-        over1095Days:
-          type: integer
-          format: int64
-      example:
-        total: 10000
-        isNull: 100
-        isNotNull: 9900
-        over0030Days: 8000
-        over0060Days: 6000
-        over0090Days: 4000
-        over0180Days: 2000
-        over0365Days: 1000
-        over0730Days: 500
-        over1095Days: 250
+        perioder:
+          $ref: '#/components/schemas/PeriodeStatistics'
+        ledighet:
+          $ref: '#/components/schemas/LedighetStatistics'
     Arbeidssoeker:
       type: object
       required:
@@ -653,6 +646,78 @@ components:
         - ARBEIDSOPPFOLGING
         - GEOGRAFISK_TILKNYTNING
         - UKJENT_VERDI
+
+    # Statistics
+    PeriodeStatistics:
+      type: object
+      required:
+        - totalt
+        - erAktiv
+        - erAvsluttet
+      properties:
+        totalt:
+          type: integer
+          format: int64
+        erAktiv:
+          type: integer
+          format: int64
+        erAvsluttet:
+          type: integer
+          format: int64
+      example:
+        totalt: 10000
+        erAktiv: 9000
+        erAvsluttet: 1000
+    LedighetStatistics:
+      type: object
+      required:
+        - erNull
+        - erIkkeNull
+        - over0030Dager
+        - over0060Dager
+        - over0090Dager
+        - over0180Dager
+        - over0365Dager
+        - over0730Dager
+        - over1095Dager
+      properties:
+        erNull:
+          type: integer
+          format: int64
+        erIkkeNull:
+          type: integer
+          format: int64
+        over0030Dager:
+          type: integer
+          format: int64
+        over0060Dager:
+          type: integer
+          format: int64
+        over0090Dager:
+          type: integer
+          format: int64
+        over0180Dager:
+          type: integer
+          format: int64
+        over0365Dager:
+          type: integer
+          format: int64
+        over0730Dager:
+          type: integer
+          format: int64
+        over1095Dager:
+          type: integer
+          format: int64
+      example:
+        erNull: 10000
+        erIkkeNull: 9000
+        over0030Dager: 7000
+        over0060Dager: 5000
+        over0090Dager: 3000
+        over0180Dager: 2000
+        over0365Dager: 1000
+        over0730Dager: 500
+        over1095Dager: 250
 
     # COMMON
     SortOrder:
