# app/kartlegging-api/src/model/dto/mod.rs
@@ -9,3 +9,4 @@ pub mod periode;
 pub mod profilering;
 pub mod request;
 pub mod response;
+pub mod statistics;
